<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Button android:text="@string/txtadd" android:id="@+id/btnfeedbackadd"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center" android:layout_marginTop="100dip" ></Button>
	<Button android:text="@string/txtquery" android:id="@+id/btnfeedbackquery"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center"></Button>
	<Button android:text="@string/txtback" android:id="@+id/btnfeedbackback"
		android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dip"
		android:layout_gravity="right"></Button>
</LinearLayout>