<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<HorizontalScrollView android:orientation="vertical" android:id="@+id/HorizontalScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
	
	<LinearLayout android:id="@+id/Linears"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="horizontal" android:layout_gravity="left">
		<LinearLayout android:id="@+id/searchLinearLayout"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:orientation="vertical">
				<EditText android:id="@+id/txtfeedbackstartDate" android:text="@string/startDate_name"
					android:layout_width="130px" android:editable="false"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<EditText android:id="@+id/txtfeedbackendDate" android:text="@string/endDate_name"
					android:layout_width="130px" android:editable="false"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<EditText android:id="@+id/txtfeedbackquery" android:layout_width="130px"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<LinearLayout android:id="@+id/LinearForButton"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:orientation="horizontal" android:gravity="center">
					<Button android:text="@string/txtsearch" android:id="@+id/btnfeedbacksearch"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="left"></Button>
					<Button android:text="@string/txtreturn" android:id="@+id/btnfeedbackreturn"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="right"></Button>
				</LinearLayout>
		</LinearLayout>
		
		<LinearLayout android:id="@+id/LinearRight"
			android:layout_width="wrap_content" android:layout_height="fill_parent"
			android:orientation="vertical">
			<TableLayout android:id="@+id/actionsTableLayout"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TableRow android:id="@+id/actionsTableRow"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/head_count"
							android:layout_height="wrap_content"
							android:width="50dip" android:layout_width="50px"></TextView>	
						<TextView android:id="@+id/headfeedback_ID"
							android:layout_height="wrap_content" android:text="主键"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_TITLE"
							android:layout_height="wrap_content" android:text="主题"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_DETAIL"
							android:layout_height="wrap_content" android:text="描述"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_ADJUNCT"
							android:layout_height="wrap_content" android:text="附件"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_ATTITUDE"
							android:layout_height="wrap_content" android:text="意见"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_DEFINE"
							android:layout_height="wrap_content" android:text="评分"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_FLOWER_STATE"
							android:layout_height="wrap_content" android:text="流程状态"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_PROCESS_CODE"
							android:layout_height="wrap_content" android:text="处理人"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_AUDITING_CODE"
							android:layout_height="wrap_content" android:text="审核人"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_BILL_STATE"
							android:layout_height="wrap_content" android:text="单据状态"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_CREATE_CODE"
							android:layout_height="wrap_content" android:text="创始建人"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_CREATE_DATE"
							android:layout_height="wrap_content" android:text="创建时间"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_EDITOR_CODE"
							android:layout_height="wrap_content" android:text="编辑人"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_EDITOR_DATE"
							android:layout_height="wrap_content" android:text="编辑时间"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headfeedback_BILLID"
							android:layout_height="wrap_content" android:text="关连业务单号"
							android:width="50dip" android:layout_width="50px"></TextView>					
				</TableRow>
			</TableLayout>
			<FrameLayout android:id="@+id/FrameLayout01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_weight="1">
				
					<ListView android:id="@+id/lvfeedbackMain"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:drawSelectorOnTop="false">
					</ListView>


			</FrameLayout>
			<LinearLayout android:id="@+id/LinearForButtons"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:gravity="center">
				<Button android:text="@string/txthome" android:id="@+id/btnfeedbackhomePage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/txtlastPage" android:id="@+id/btnfeedbacklastPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/txtnextPage" android:id="@+id/btnfeedbacknextPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/txtbottom" android:id="@+id/btnfeedbackbottomPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
			</LinearLayout>
			<LinearLayout android:id="@+id/LinearForButtons"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:gravity="center">
				<TextView android:text="@string/txtcurPage"
					android:layout_width="wrap_content" android:layout_height="fill_parent"></TextView>
				<TextView android:id="@+id/txtfeedbackcurrentPage"
					android:layout_width="wrap_content" android:layout_height="fill_parent"></TextView>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	</HorizontalScrollView>
</RelativeLayout>