<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<HorizontalScrollView android:orientation="vertical" android:id="@+id/HorizontalScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
	
	<LinearLayout android:id="@+id/Linears"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="horizontal" android:layout_gravity="left">
		<LinearLayout android:id="@+id/searchLinearLayout"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:orientation="vertical">
				<EditText android:id="@+id/txtcollectionstartDate" android:text="@string/startDate_name"
					android:layout_width="130px" android:editable="false"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<EditText android:id="@+id/txtcollectionendDate" android:text="@string/endDate_name"
					android:layout_width="130px" android:editable="false"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<EditText android:id="@+id/txtcollectionquery" android:layout_width="130px"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<LinearLayout android:id="@+id/LinearForButton"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:orientation="horizontal" android:gravity="center">
					<Button android:text="@string/txtsearch" android:id="@+id/btncollectionsearch"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="left"></Button>
					<Button android:text="@string/txtreturn" android:id="@+id/btncollectionreturn"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="right"></Button>
				</LinearLayout>
		</LinearLayout>
		
		<LinearLayout android:id="@+id/LinearRight"
			android:layout_width="wrap_content" android:layout_height="fill_parent"
			android:orientation="vertical">
			<TableLayout android:id="@+id/actionsTableLayout"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TableRow android:id="@+id/actionsTableRow"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/head_count"
							android:layout_height="wrap_content"
							android:width="50dip" android:layout_width="50px"></TextView>	
						<TextView android:id="@+id/headcollection_ID"
							android:layout_height="wrap_content" android:text="主键"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_TITLE"
							android:layout_height="wrap_content" android:text="主题"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_DETAIL"
							android:layout_height="wrap_content" android:text="描述"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_ADJUNCT"
							android:layout_height="wrap_content" android:text="附件"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_TARGET"
							android:layout_height="wrap_content" android:text="指标"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_FORMAT"
							android:layout_height="wrap_content" android:text="选择反馈单格式"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_PROID"
							android:layout_height="wrap_content" android:text="指定反馈对象"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_ATTITUDE"
							android:layout_height="wrap_content" android:text="意见"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_GRADE"
							android:layout_height="wrap_content" android:text="评分"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_ISEND"
							android:layout_height="wrap_content" android:text="结束"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_FLOWER_STATE"
							android:layout_height="wrap_content" android:text="流程状态"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_PROCESS_CODE"
							android:layout_height="wrap_content" android:text="处理人"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_AUDITING_CODE"
							android:layout_height="wrap_content" android:text="审核人"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_BILL_STATE"
							android:layout_height="wrap_content" android:text="单据状态"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_CREATE_CODE"
							android:layout_height="wrap_content" android:text="创始建人"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_CREATE_DATE"
							android:layout_height="wrap_content" android:text="创建时间"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_EDITOR_CODE"
							android:layout_height="wrap_content" android:text="编辑人"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_EDITOR_DATE"
							android:layout_height="wrap_content" android:text="编辑时间"
							android:width="50dip" android:layout_width="50px"></TextView>					
						<TextView android:id="@+id/headcollection_FEEDBKID"
							android:layout_height="wrap_content" android:text="反馈单号"
							android:width="50dip" android:layout_width="50px"></TextView>					
				</TableRow>
			</TableLayout>
			<FrameLayout android:id="@+id/FrameLayout01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_weight="1">
				<ListView android:id="@+id/lvcollectionMain"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:drawSelectorOnTop="false">
				</ListView>
			</FrameLayout>
			<LinearLayout android:id="@+id/LinearForButtons"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:gravity="center">
				<Button android:text="@string/txthome" android:id="@+id/btncollectionhomePage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/txtlastPage" android:id="@+id/btncollectionlastPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/txtnextPage" android:id="@+id/btncollectionnextPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/txtbottom" android:id="@+id/btncollectionbottomPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
			</LinearLayout>
			<LinearLayout android:id="@+id/LinearForButtons"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:gravity="center">
				<TextView android:text="@string/txtcurPage"
					android:layout_width="wrap_content" android:layout_height="fill_parent"></TextView>
				<TextView android:id="@+id/txtcollectioncurrentPage"
					android:layout_width="wrap_content" android:layout_height="fill_parent"></TextView>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	</HorizontalScrollView>
</RelativeLayout>